add operations switcher
