# routes/api/operations.js
@@ -1,0 +1,8 @@
+const { OperationsController } = require( '../../controllers' );
+
+const router = require( 'express' ).Router();
+const { verifyAuthToken } = require( '../../utilities/authentication/validateAuthToken' );
+
+router.route( '/guest_operations' ).post( verifyAuthToken, OperationsController.transportAction );
+
+module.exports = router;
